Fixing the map back to how it was
Not enough time to make it work as i want so i made it just not look like a bug

--- a/styles/behroozs-stylesheet.css
+++ b/styles/behroozs-stylesheet.css
@@ -66,7 +66,7 @@ main#landing-main {
 }
 
 .green-header-container {
-  background-color: #2f6237;
+  background: linear-gradient(90deg, #ff9900, #f76c6c); /* Bold gradient */
 }
 
 .header-left {
